# polytopia_ia

./: .dockerignore  .gitignore  Dockerfile  Makefile  NEXT_STEPS.md  README.md  TUNING_LOG.md  docker-compose.yml  pyproject.toml
checkpoints/: dqn_nocturno.pkl  dqn_nocturno_model.pt
docs/: ALGORITHMS.md
experiments/: analyze_dqn.py  benchmark.py  benchmark_dqn_vs_all.py  benchmark_lookahead.py  diagnostic.py  plot_tournament.py  plots.py  tournament.py  train_dqn_nocturno.py
reports/: diagnostic_v2.json  diagnostic_v3.json  diagnostic_v3_5.json  diagnostic_v3_full.json  tournament.json  tournament_narrative.md  tournament_workflow.md
src/polytopia/: game_loop.py  interfaces.py
src/polytopia/agents/: __init__.py  aggressive_bot.py  base.py  defensive_bot.py  dqn_bot.py  economic_bot.py  features.py  greedy_attack_bot.py  heuristic_bot.py  lookahead_bot.py  random_bot.py
src/polytopia/engine/: actions.py  map_gen.py  rules.py  state_init.py
src/polytopia/renderers/: terminal.py
src/polytopia/renderers/gui/: __init__.py  colors.py  entity_renderer.py  hud_renderer.py  iso_projection.py  live_runner.py  main_renderer.py  replay_player.py  terrain_renderer.py
src/polytopia/replay/: __init__.py  loader.py  recorder.py
src/polytopia/training/: checkpoint.py
tests/: test_diagnostic_sanity.py  test_dqn_training.py  test_game_loop.py  test_gui_iso.py  test_heuristic_bot.py  test_interfaces.py  test_legal_actions.py  test_map.py  test_replay.py  test_rules.py  test_strategy_bots.py  test_terminal_renderer.py  test_watch_mode.py
