[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polytopia_ai"
version = "0.1.0"
description = "Polytopia AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "rich>=13.0",
]

[project.optional-dependencies]
gui = ["pygame>=2.5"]
dev = [
    "pytest>=8.0",
    "black",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/polytopia"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
